        * Show magnifier when selection handlers are pressed or moved.

2013-06-22  ChunEon Park (Hermet)

        * Block mouse events when the ctxpopup on dismiss.

2013-06-23  ChunEon Park (Hermet)

        * Apply current ctxpopup style to the list in the ctxpopup.

2013-06-24  Ryuan Choi (ryuan)

        * fileselector : Add support mime type filter

2013-06-25  Ryuan Choi (ryuan)

        * Fix crash of elm_notify when timeout is zero.

2013-06-26  Daniel Zaoui (JackDanielZ)

        * Gesture Layer: add APIs to add/del multiple callbacks for a same
	gesture/type/state.

2013-06-25  Ryuan Choi (ryuan)

        * Fix Segfault in elementary file_selector_example when closed.
          https://phab.enlightenment.org/T133

2013-06-30  Jaehwan Kim

        * Add the elm_scrollable_interface_content_viewport_resize_cb_set.
        When the viewport is resized, the enrolled function is called.

2013-07-03  Thiep Ha

        * Fix bug of showing multiple popups in Entry.

2013-07-03  Hosang Kim

        * added callback call "scroll", "scroll,anim,start", "scroll,anim,stop", "scroll,drag,start", "scroll,drag,stop"
        in toolar widget.

2013-07-03  Jaehwan Kim

        * Change the method to calculate a distance which be scrolled from linear to sine curve.
        And add the configuration thumbscroll_flick_distance_tolerance. It's the max flick distance.

2013-07-06  Shinwoo Kim

        * Add elm_access_highlight_next_set, export elm_widget_focus_region_show

2013-07-12  Guilherme Íscaro

        * Add elm_dayselector_wekdays_names_set/get

2013-07-13  Daniel Juyung Seo

        * Fix elm_object_item_part_content_set bug with end content in elm_list.

2013-07-14  ChunEon Park (Hermet)

        * Entry : Change the keyboard mode only if the imf is not available. If
        the imf is available, the keyboard mode should be decided by ime, but
        not entry. This prevents the asynchronous states between ime and
        conformant.